fix search bar & user info alignment

--- a/label_studio/frontend/src/pages/Settings/Members/Members.styl
+++ b/label_studio/frontend/src/pages/Settings/Members/Members.styl
@@ -51,7 +51,7 @@
       flex 1
 
     &.email
-      width 200px
+      width 300px
 
     &.last-activity
       width 160px
